[package]
name = "keylogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "daemon"
path = "daemon/lib.rs"

[[bin]]
name = "keylogger"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
evdev = { version = "0.12.2", features = ["tokio"]}
anyhow = "1.0.86"
daemonize = "0.5.0"
