[package]
name = "keylogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "keylogger_service"
path = "service/lib.rs"

[[bin]]
name = "keylogger"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
evdev = { version = "0.12.2", features = ["tokio"]}
anyhow = "1.0.86"
daemonize = "0.5.0"
simplelog = "0.12.2"
log = "0.4.21"
clap = { version = "4.5.4", features = ["derive"] }
rustix = { version = "0.38.34", features = ["fs", "process"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
